--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ import org.apache.tools.ant.DirectoryScanner
 
 plugins {
     id 'java-library'
+    id 'application'
 }
 
 group 'edu.depaul'
@@ -62,3 +63,10 @@ check {
     finalizedBy packageDistribution
 }
 
+ext {
+    javaMainClass = 'main.Main'
+}
+
+application {
+    mainClassName = javaMainClass
+}
